[gd_scene load_steps=3 format=2]

[ext_resource path="res://Tiles/post_town.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Objects/Buildings/Houses/Interiors/House1.gd" type="Script" id=2]

[node name="Home1" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 140, 0, 1, 141, 0, 2, 141, 0, 3, 141, 0, 4, 143, 0, 5, 141, 0, 6, 141, 0, 7, 141, 0, 8, 141, 0, 9, 143, 0, 10, 141, 0, 11, 141, 0, 12, 141, 0, 13, 142, 0, 65536, 153, 0, 65537, 152, 0, 65538, 152, 0, 65539, 152, 0, 65540, 150, 0, 65541, 152, 0, 65542, 152, 0, 65543, 152, 0, 65544, 152, 0, 65545, 150, 0, 65546, 152, 0, 65547, 152, 0, 65548, 152, 0, 65549, 151, 0, 131072, 161, 0, 131073, 160, 0, 131074, 157, 0, 131075, 157, 0, 131076, 157, 0, 131077, 157, 0, 131078, 157, 0, 131079, 157, 0, 131080, 157, 0, 131081, 157, 0, 131082, 157, 0, 131083, 157, 0, 131084, 157, 0, 131085, 157, 0, 196608, 161, 0, 196609, 161, 0, 196610, 159, 0, 196611, 157, 0, 196612, 157, 0, 196613, 157, 0, 196614, 157, 0, 196615, 157, 0, 196616, 157, 0, 196617, 157, 0, 196618, 157, 0, 196619, 157, 0, 196620, 157, 0, 196621, 157, 0, 262144, 161, 0, 262145, 161, 0, 262146, 160, 0, 262147, 157, 0, 262148, 157, 0, 262149, 157, 0, 262150, 157, 0, 262151, 157, 0, 262152, 157, 0, 262153, 157, 0, 262154, 157, 0, 262155, 157, 0, 262156, 157, 0, 262157, 157, 0, 327680, 161, 0, 327681, 161, 0, 327682, 161, 0, 327683, 159, 0, 327684, 157, 0, 327685, 157, 0, 327686, 157, 0, 327687, 157, 0, 327688, 157, 0, 327689, 157, 0, 327690, 157, 0, 327691, 157, 0, 327692, 157, 0, 327693, 157, 0, 393216, 161, 0, 393217, 161, 0, 393218, 161, 0, 393219, 160, 0, 393220, 157, 0, 393221, 157, 0, 393222, 157, 0, 393223, 157, 0, 393224, 157, 0, 393225, 157, 0, 393226, 157, 0, 393227, 157, 0, 393228, 157, 0, 393229, 157, 0, 458752, 161, 0, 458753, 161, 0, 458754, 161, 0, 458755, 161, 0, 458756, 159, 0, 458757, 157, 0, 458758, 157, 0, 458759, 157, 0, 458760, 157, 0, 458761, 157, 0, 458762, 157, 0, 458763, 157, 0, 458764, 157, 0, 458765, 157, 0, 524288, 161, 0, 524289, 161, 0, 524290, 161, 0, 524291, 161, 0, 524292, 160, 0, 524293, 157, 0, 524294, 157, 0, 524295, 157, 0, 524296, 157, 0, 524297, 157, 0, 524298, 157, 0, 524299, 157, 0, 524300, 157, 0, 524301, 157, 0, 589824, 161, 0, 589825, 161, 0, 589826, 161, 0, 589827, 161, 0, 589828, 161, 0, 589829, 159, 0, 589830, 157, 0, 589831, 157, 0, 589832, 157, 0, 589833, 157, 0, 589834, 157, 0, 589835, 157, 0, 589836, 157, 0, 589837, 157, 0, 655360, 161, 0, 655361, 161, 0, 655362, 161, 0, 655363, 161, 0, 655364, 161, 0, 655365, 160, 0, 655366, 157, 0, 655367, 157, 0, 655368, 157, 0, 655369, 157, 0, 655370, 157, 0, 655371, 157, 0, 655372, 157, 0, 655373, 157, 0 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 140, 0, 1, 155, 0, 3, 155, 0, 11, 44, 0, 12, 44, 0, 65536, 153, 0, 65547, 48, 0, 65548, 48, 0, 131072, 161, 0, 131073, 160, 0, 196608, 161, 0, 196609, 161, 0, 196610, 159, 0, 262144, 161, 0, 262145, 161, 0, 262146, 160, 0, 327680, 161, 0, 327681, 161, 0, 327682, 161, 0, 327683, 159, 0, 393216, 161, 0, 393217, 161, 0, 393218, 161, 0, 393219, 160, 0, 458752, 161, 0, 458753, 161, 0, 458754, 161, 0, 458755, 161, 0, 458756, 159, 0, 524288, 161, 0, 524289, 161, 0, 524290, 161, 0, 524291, 161, 0, 524292, 160, 0, 589824, 161, 0, 589825, 161, 0, 589826, 161, 0, 589827, 161, 0, 589828, 161, 0, 589829, 159, 0, 655360, 161, 0, 655361, 161, 0, 655362, 161, 0, 655363, 161, 0, 655364, 161, 0, 655365, 160, 0 )

[node name="exithouse" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="exithouse"]
polygon = PoolVector2Array( 0, 64, 48, 64, 48, 128, 0, 128 )

[node name="start_position" type="Position2D" parent="."]
position = Vector2( 240, 176 )

[node name="YSort" type="YSort" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="YSort"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="YSort/StaticBody2D"]
polygon = PoolVector2Array( -64, 64, -64, 352.753, -64, 408, 0, 408, 448, 408, 448, 352, 0, 352, 0, 64, 448, 64, 448, 352, 448, 408, 512, 408, 512, 352, 512, 64, 512, 0, 448, 0, 0, 0, -64, 0 )
[connection signal="tree_exiting" from="." to="." method="_on_Home1_tree_exiting"]
[connection signal="body_entered" from="exithouse" to="." method="_on_exithouse_body_entered"]
[connection signal="body_exited" from="exithouse" to="." method="_on_exithouse_body_exited"]
